--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -214,7 +214,7 @@ knitr::include_graphics("docs/images/hypothesis.png")
 От того, какой вывод мы хотим сделать, хотим ли обнаружить характер связи между уровнями категориальной переменной (чаще всего линейной, но может быть и какой-то еще, экспоненциальной например) или нам достаточноо сравнить двве группы между собой, будет зависеть, какой статистический метод будем выбирать. Вернемся к этому чуть позже.
 
 
-### Связь между ЗП и НП
+### Связь между ЗП и НП {#relationship}
 
 Выводы о какой связи мы можем установить?
 
