--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -198,7 +198,7 @@ knitr::include_graphics("docs/images/anova_SS.jpg")
 
 Отсюда логически вытекает один из важных показателей для интпреретации результатов ANOVA: 
 
-<p align="center">$R^2 = \frac{SSE}{SST} = 1 - \frac{SSR}{SST}$ -- процент объясненной факторами дисперсии (коэффициент детерминации), то есть то, насколько хорошо наши факторы объясняют изменчивость данных. </p>
+<p align="center">$R^2 = \frac{SSE}{SST} = 1 - \frac{SSR}{SST}$ -- процент объясненной факторами дисперсии (**коэффициент детерминации**), то есть то, насколько хорошо наши факторы объясняют изменчивость данных. </p>
 
 А до подсчета F-значения остается один шаг -- посчитать средние суммы квадратов, то есть поделить их на число степененй свобооды для каждой суммы квадратов (точно так же, как мы делили дисперсию на число наблюдений! Возвращаемся к ее смыслу)
 
