--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -20,7 +20,7 @@ knitr::include_graphics("docs/images/variable.png")
 
 ### Основные типы данных
 
-**Числовой** (целые числа – **integer**, вещественные числа – **real**, числа с плавающей точкой (дробные) – **float**)
+**Числовой** (целые числа – **integer** или **numeric**, вещественные числа – **real**, числа с плавающей точкой (дробные) – **float**)
 **Текстовый** (**character**, если один символ, или **string** – много символов)
 **Логический** (logical – принимает только значения True / False)
 **NA** – пропущенные значения (not available)
@@ -42,18 +42,22 @@ https://practicum.yandex.ru/blog/10-osnovnyh-struktur-dannyh/
 </p>
 
 
-## Операции с переменными
+## Операции с переменными и функции
 
 В зависимости от того, с переменными какого типа мы работаем, мы можем выполнять с ними разные операции.
 
-Операция – это выполнение каких-либо действий над данными. То, что выполняет это действие, называется оператором. Оператором может знак сложения, деления, больше или меньше и тд.
+**Операция** – это выполнение каких-либо действий над данными. То, что выполняет это действие, называется **оператором** или **функцией**. Разница между ними в том, что оператор выполняет атомарные (единичные и простые действия), например, оператором может быть знак сложения, деления, больше или меньше и тд. Функция делает более сложные действия: например, создать вектор с помощью функции `c()`, прочитать данные с помощью функции `read_csv()`, отфильтровать данные с помощью функции `select()`. Обратите внимание, что при вызове функции после ее названия всегда ставятся круглые скобки.
 
-| **Тип данных** |              **Возможные операции**              |
-|:--------------:|:------------------------------------------------:|
-|    Числовой    |                   +, -, /, *, %                  |
-|    Текстовый   | + (конкатенация), поиск по определенному символу |
-|   Логический   |          >, <, == (равно), != (не равно)         |
+| **Тип данных** |                      **Возможные атомарные операции**                     |
+|:--------------:|:---------------------------------------------------------------:|
+|    Числовой    |                  = (присвоение), +, -, /, *, %                  |
+|    Текстовый   | = (присвоение),+ (конкатенация), поиск по определенному символу |
+|   Логический   |          = (присвоение),>, <, == (равно), != (не равно)         |
 
 
+## Начало рабты с данными
 
+Мы будем работать с данным World Happiness Report за 2016 год https://www.kaggle.com/datasets/unsdsn/world-happiness
+
+https://en.wikipedia.org/wiki/World_Happiness_Report 
 
