--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -20,19 +20,19 @@ knitr::include_graphics("docs/images/variable.png")
 
 ### Основные типы данных
 
-**Числовой** (целые числа – **integer** или **numeric**, вещественные числа – **real**, числа с плавающей точкой (дробные) – **float**)
-**Текстовый** (**character**, если один символ, или **string** – много символов)
-**Логический** (logical – принимает только значения True / False)
-**NA** – пропущенные значения (not available)
-**NaN** – not a number, результат выполнения невозможной числовой операции (например, деление на 0)
+* **Числовой** (целые числа – **integer** или **numeric**, вещественные числа – **real**, числа с плавающей точкой (дробные) – **float**)
+* **Текстовый** (**character**, если один символ, или **string** – много символов)
+* **Логический** (logical – принимает только значения True / False)
+* **NA** – пропущенные значения (not available)
+* **NaN** – not a number, результат выполнения невозможной числовой операции (например, деление на 0)
 
 ### Основные структуры данных {#data_structures}
 
-**Вектор (vector)** – одномерный массив одного типа данных
-**Массив (array)** – многомерный массив одного типа данных, состоящий из векторов одной длины 
-**Матрица (matrix)** – двумерный массив только числовых данных
-**Список (list)** – по сути, многомерный массив, но может состоять из векторов разной длины и иметь данные разных типв
-**Данные, датафрейм (dataframe)** – по сути, cписок, но все вектора одной длины
+* **Вектор (vector)** – одномерный массив одного типа данных
+* **Массив (array)** – многомерный массив одного типа данных, состоящий из векторов одной длины 
+* **Матрица (matrix)** – двумерный массив только числовых данных
+* **Список (list)** – по сути, многомерный массив, но может состоять из векторов разной длины и иметь данные разных типв
+* **Данные, датафрейм (dataframe)** – по сути, cписок, но все вектора одной длины
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
