--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -112,7 +112,7 @@ View(whr) # просматриваем, что получилось переда
 whr$Family # отбираем всю колонку 
 ```
 
-Или можем вспомнить, что датафрейм имеет два измерения, как и [двумерный массив](data_structures), и можем обратиться по индексу: номер колонки и номер строки. Если нас интересует не конкретная строка, а все строки, то на месте этого индекс ничего не ставится, как бы пропускаем его.
+Или можем вспомнить, что датафрейм имеет два измерения, как и [двумерный массив](data_structures), и можем обратиться по индексу (в квадртных скобках): номер строки (первое число) и номер колонки (второе число). Если нас интересует не конкретная строка, а все строки, то на месте этого индекс ничего не ставится, как бы пропускаем его.
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 whr[,8] # отбираем всю колонку другим способом
